[tool.poetry]
name = "lclclclc"
version = "0.1.0"
description = "Grinding materials"
authors = ["Stefan Wong <stfnwong@gmail.com>"]
license = "DEEZ NUTS"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
pudb = "^2022.1.3"
ipython = "^8.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
