[tool.poetry]
name = "lc_sql"
version = "0.1.0"
description = ""
authors = ["Stefan Wong <stfnwong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
ipython = "^8.8.0"
pudb = "^2022.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
